# SRB2Proto

./: .gitignore  README.md
Binaries/: NewMillenium  SRB2.WAD  config.cfg
Code/: CMakeLists.txt  NewMillenium.rc  SRB2Proto.sln  SRB2Proto.vcxproj  SRB2Proto.vcxproj.filters  SRB2ProtoSDL.vcxproj  SRB2ProtoSDL.vcxproj.filters  command.c  command.h  console.c  d_clisrv.c  d_main.c  d_main.h  d_net.c  d_netcmd.c  d_netcmd.h  d_netfil.c  d_player.h  doomdef.h  doomtype.h  f_finale.c  g_game.c  g_game.h  g_input.c  g_input.h  hu_stuff.c  hu_stuff.h  i_net.h  i_sound.h  i_system.h  i_tcp.c  i_video.h  m_cheat.c  m_menu.c  m_menu.h  p_enemy.c  p_fab.c  p_inter.c  p_local.h  p_mobj.c  (+24 more)
Code/CTR/: i_cdmus.c  i_main.c  i_main.h  i_net.c  i_sound.c  i_system.c  i_video.c
Code/WIN32/: WIN_CD.C  WIN_MAIN.C  WIN_SND.C  WIN_SYS.C  WIN_VID.C
Code/sdl2/: i_cdmus.c  i_main.c  i_main.h  i_net.c  i_sound.c  i_system.c  i_video.c
